--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "assemble-less": "",
-    "grunt-css": "",
-    "grunt-contrib-clean": "",
-    "grunt-contrib-concat": "",
-    "grunt-contrib-connect": "",
-    "grunt-contrib-imagemin": "",
-    "grunt-contrib-jshint": "",
-    "grunt-contrib-uglify": "",
-    "grunt-contrib-watch": "",
-    "grunt-preprocess": ""
+    "assemble-less": "~0.5.1",
+    "grunt-css": "~0.5.4",
+    "grunt-preprocess": "~3.0.1",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-imagemin": "~0.2.1",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-uglify": "~0.2.4"
   }
 }
